5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1664_1395.log
== TEST (2019-04-16 11:05:41) 
-- CODE:
vendeu = float(input("Valor de vendas:"))
exece = vendeu%1000
cinco = 1000*0.05
dez = (1000*0.05)+(execd*0.1)
if(vendeu<=1000):
	print(round(cinco, 2))
if(vendeu>1000):
	print(round(dez, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dez = (1000*0.05)+(execd*0.1)
NameError: name 'execd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:05:58) 
-- CODE:
vendeu = float(input("Valor de vendas:"))
execed = vendeu%1000
cinco = 1000*0.05
dez = (1000*0.05)+(execd*0.1)
if(vendeu<=1000):
	print(round(cinco, 2))
if(vendeu>1000):
	print(round(dez, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dez = (1000*0.05)+(execd*0.1)
NameError: name 'execd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:06:09) 
-- CODE:
vendeu = float(input("Valor de vendas:"))
execed = vendeu%1000
cinco = 1000*0.05
dez = (1000*0.05)+(execed*0.1)
if(vendeu<=1000):
	print(round(cinco, 2))
if(vendeu>1000):
	print(round(dez, 2))
-- OUTPUT:
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:06:42) 
-- CODE:
vendeu = float(input("Valor de vendas:"))
execed = vendeu-1000

cinco = 1000*0.05
dez = (1000*0.05)+(execed*0.1)
if(vendeu<=1000):
	print(round(cinco, 2))
if(vendeu>1000):
	print(round(dez, 2))
-- OUTPUT:
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:06:49) 
-- CODE:
vendeu = float(input("Valor de vendas:"))
execed = vendeu-1000

cinco = 1000*0.05
dez = (1000*0.05)+(execed*0.1)
if(vendeu<=1000):
	print(round(cinco, 2))
if(vendeu>1000):
	print(round(dez, 2))
-- OUTPUT:
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:06:56) 
-- CODE:
vendeu = float(input("Valor de vendas:"))
execed = vendeu-1000

cinco = 1000*0.05
dez = (1000*0.05)+(execed*0.1)
if(vendeu<=1000):
	print(round(cinco, 2))
if(vendeu>1000):
	print(round(dez, 2))
-- EXECUTION TIME:
0.20648
-- TEST CASE 1:
---- input:
995.58
---- correct output:
49.78
---- user output:
50.0
-- TEST CASE 2:
---- input:
4500.86
---- correct output:
400.09
---- user output:
400.09
-- TEST CASE 3:
---- input:
100
---- correct output:
5.0
---- user output:
50.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:07:17) 
-- CODE:
vendeu = float(input("Valor de vendas:"))
execed = vendeu-1000
cinco = 1000*0.05
dez = (1000*0.05)+(execed*0.1)
if(vendeu<=1000):
	print(round(cinco, 2))
if(vendeu>1000):
	print(round(dez, 2))
-- OUTPUT:
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:07:34) 
-- CODE:
vendeu = float(input("Valor de vendas:"))
execed = vendeu-1000
cinco = 1000*0.05
dez = (1000*0.05)+(execed*0.1)
if(vendeu<=1000):
	print(round(cinco, 2))
if(vendeu>1000):
	print(round(dez, 2))
-- OUTPUT:
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:09:13) 
-- CODE:
vendeu = float(input("Valor de vendas:"))
execed = vendeu-1000
dez = (1000*0.05)+(execed*0.1)
if(vendeu<=1000):
	cinco = vendeu*0.05
	print(round(cinco, 2))
if(vendeu>1000):
	print(round(dez, 2))
-- OUTPUT:
49.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:09:20) 
-- CODE:
vendeu = float(input("Valor de vendas:"))
execed = vendeu-1000
dez = (1000*0.05)+(execed*0.1)
if(vendeu<=1000):
	cinco = vendeu*0.05
	print(round(cinco, 2))
if(vendeu>1000):
	print(round(dez, 2))
-- EXECUTION TIME:
0.163252
-- TEST CASE 1:
---- input:
995.58
---- correct output:
49.78
---- user output:
49.78
-- TEST CASE 2:
---- input:
4500.86
---- correct output:
400.09
---- user output:
400.09
-- TEST CASE 3:
---- input:
100
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
